assets/css/style.css
* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
}

body {
    background-color: blueviolet;
}

.header {
    background-color: aquamarine;
}

.high-scores {
    color: rgb(174, 43, 183);
}

.home {
        background-color: white;
        height: 100vh;
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
}

.home-page {
    max-width: 600px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.home-page h1 {
    margin-bottom: 15px;
    text-align: center;
}

.home-page p {
    text-align: center;
    margin-bottom: 30px;   
}

.start-btn {
    background-color: rgb(28, 0, 128);
    color: white;
    border-radius: 5px;
    border: 1px solid black;
    text-align: center;
    border-radius: 5px;
    width: 90px;
    height: 30px;
}

.start-btn:hover {
    background: rgb(174, 43, 183);
    color: white;
}

.quiz {
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    background-color: white;
    display: flex;
    justify-content: center;
}

.quiz h2 {
    margin-bottom: 15px;
    text-align: center;
}

.answer-btns {
    display: grid;
    padding-right: 140px;
}

.btn {
    background-color: rgb(28, 0, 128);
    color: white;
    border-radius: 5px;
    border: 1px solid black;
    text-align: center;
    border-radius: 5px;
    width: 90px;
    height: 30px;
    margin-bottom: 8px;
}

.btn:hover {
    background: rgb(174, 43, 183);
    color: white;
}

